--- a/src/client/index.html
+++ b/src/client/index.html
@@ -34,7 +34,7 @@
 
 <body>
 	<header>
-		<h1>Fitness * Adventure * Beer * Header</h1>
+		<h1>Fitness * Adventure * Beer</h1>
 	</header>
 	<section>
 		<div class="col-xs-2">Side Bar</div>
